--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li>projets</li>
                 <li>contact</li>
-                <li id="login"><a href="login.html">Login</a></li>
+                <li id="login"><a href="login.html">login</a></li>
                 <li id="logout" class="hidden"><a href="index.html">logout</a></li>
                 <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
@@ -96,7 +96,7 @@
                         <input class="boutton-texte" type="text" id="title" />
                         <label class="texte-categorie" for="categorie">Catégories</label>
                         <select class="boutton-categorie" id="categorie" name="categorie">
-                            <option></option>
+                            
                         </select>
                         <input class="boutton-valider" id="submitValider" type="submit" value="valider" />
                         <div class="messageForm">
