--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 
 
 		
-	</section>
+	
 	<section id="contact">
 		<h2>Log in</h2>
 
@@ -38,7 +38,9 @@
 			<input type="submit" value="Se connecter">
 	</form>
 	<div id="error-message"></div>
-		<li>Mot de passe oublié</li>
+	<ul> <!-- Début de la liste -->
+			<li class="mdp">Mot de passe oublié</li> <!-- Élément de liste -->
+	</ul>
 	</section>
 </main>
 
